projetGL/src/test/deca/syntax/valid/ourTests/test_cast_if.deca
// Cast explicite avec une vérification conditionnelle.
{
    float d = 3.99f;
    if ((int) (d) == 3) {
        println("cast ok");
        // Résultat attendu : "cast ok" affiché
    }
}