projetGL/src/test/deca/syntax/invalid/ourTests/test_declaration_var.deca
//description:decalaration d'une variable apres une instruction

{
    int a; 
    float b;
    println("hello");
    int c;
}